# agent-service-a2a

./: .gitignore  README.md  electron-builder.json  package.json  pnpm-lock.yaml
backend/: README.md  check_current_config.py  debug_env.py  detailed_test.py  pyproject.toml  requirements.txt  test_a2a.py  test_gemini_integration.py
backend/agent_service/: agent.py
backend/server/: main.py
electron/: README.md  main.js  package.json
frontend/apps/web/: README.md  package.json  pnpm-lock.yaml
frontend/apps/web/app/: assistant.tsx  layout.tsx  page.tsx
frontend/apps/web/components/assistant-ui/: model-picker.tsx
frontend/apps/web/lib/: runtime.ts
frontend/apps/web/providers/: RuntimeProvider.tsx
