[tool.poetry]
name = "agent_service_a2a"
version = "0.1.0"
description = "AI Agent as a Service with streaming responses"
authors = ["Developer <developer@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
pydantic = "^2.5.0"
sse-starlette = "^1.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn server.main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn server.main:app --host 0.0.0.0 --port 8000"